collision fixed. more efficient movement algo implemented. GUI animation works properly.